--- a/src/Components/Main/Main.module.css
+++ b/src/Components/Main/Main.module.css
@@ -8,13 +8,64 @@
     width: 100%;
     height: 100%;
     max-width: 1328px;
-    height: 460px;
+    height: 462px;
     margin: 0 auto;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-.MainContentText {}
+.MainContentText {
+    font-size: 36px;
+    font-family: Roboto;
+    font-weight: 300;
+    color: black;
+    margin: auto;
+}
 
-.MainContentImage {}
+.MainContentImage img {
+    align-items: baseline !important;
+}
+
+.MainContentTitle {
+    margin: 0 auto;
+    margin-top: 40px;
+    padding-bottom: 35px;
+    width: 100%;
+    max-width: 1328px;
+    text-align: left;
+    font-size: 36px;
+    font-family: Roboto;
+    font-weight: 300;
+}
+
+.MainContentCards {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    max-width: 1328px;
+    justify-content: space-between;
+}
+
+.MainContentCard {
+    width: 160px;
+}
+
+.MainContentCardsTextWrapper {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    max-width: 1328px;
+    justify-content: space-between;
+}
+
+.MainContentCardText {
+    width: 145px;
+    padding: 5px;
+    font-family: Roboto;
+    font-weight: 300;
+    font-size: 18px;
+    text-align: center;
+}
