--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -9,6 +9,24 @@
     width: 100%;
     height: 68px;
     max-width: 1328px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .FooterCopyright {}
+
+.SocialIconsWrapper {
+    display: flex;
+}
+
+.SocialIconsImg {
+    height: 30px;
+    padding-right: 16px;
+    width: 30px;
+    filter: grayscale(100);
+}
+
+.SocialIconsImg a:nth-child(4) {
+    padding-right: 0px;
+}
