--- a/src/Components/About/About.module.css
+++ b/src/Components/About/About.module.css
@@ -1,9 +1,29 @@
 .AboutWrapper {
     width: 100%;
+    margin: 0 auto;
+    display: flex;
+    background-color: #E3E3E3;
+}
+
+.AboutContent {
+    width: 100%;
     height: 100%;
     max-width: 1328px;
     margin: 0 auto;
     display: flex;
     padding-top: 40px;
+    font-size: 19px;
+    font-weight: 300;
     padding-bottom: 40px;
+}
+
+.AboutImage {
+    margin: auto;
+    align-items: center;
+}
+
+.AboutTitle {
+    font-size: 48px;
+    font-family: Roboto;
+    font-weight: 300;
 }
