new component and styles

--- a/src/Components/About/About.module.css
+++ b/src/Components/About/About.module.css
@@ -15,11 +15,13 @@
     font-size: 19px;
     font-weight: 300;
     padding-bottom: 40px;
+    z-index: 2;
 }
 
 .AboutImage {
     margin: auto;
     align-items: center;
+    z-index: 1;
 }
 
 .AboutTitle {
