--- a/src/Components/Reviews/Reviews.module.css
+++ b/src/Components/Reviews/Reviews.module.css
@@ -13,6 +13,19 @@
     display: flex;
     width: 100%;
     max-width: 1328px;
+    padding: 150px 20px;
+}
+
+.ReviewsTitle {
+    font-family: Roboto;
+    font-size: 48px;
+    font-weight: 300;
+}
+
+.ReviewsSubTitle {
+    font-family: Roboto;
+    font-size: 24px;
+    font-weight: 300;
 }
 
 .ReviewsBlockItem1 {
