--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -41,3 +41,12 @@
     border-bottom: 1px solid black;
     opacity: 1;
 }
+
+@media screen and (max-width: 568px) {
+    .Header__Logo img:nth-child(1) {
+        width: 50px;
+    }
+    .Header__Logo img:nth-child(2) {
+        width: 120px;
+    }
+}
