--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -15,6 +15,10 @@
     justify-content: space-between;
 }
 
+.social-icon {
+    filter: grayscale(100);
+}
+
 .FooterCopyright {}
 
 .SocialIconsWrapper {
