--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -42,6 +42,22 @@
     opacity: 1;
 }
 
+.Header__Logo_text1 {
+    font-size: 26px;
+    font-weight: bold;
+    opacity: 0.7;
+    line-height: 26px;
+    margin-block-start: 12px;
+    margin-block-end: -2px;
+}
+
+.Header__Logo_text2 {
+    font-size: 10px;
+    font-weight: bold;
+    opacity: 0.5;
+    text-align: center;
+}
+
 @media screen and (max-width: 568px) {
     .Header__Logo img:nth-child(1) {
         width: 50px;
