--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -58,6 +58,12 @@
     text-align: center;
 }
 
+@media screen and (max-width: 768px) {
+    .Header__Nav {
+        max-width: 50px;
+    }
+}
+
 @media screen and (max-width: 568px) {
     .Header__Logo img:nth-child(1) {
         width: 50px;
