--- a/src/Components/Work/Work.module.css
+++ b/src/Components/Work/Work.module.css
@@ -53,6 +53,11 @@
     max-width: 580px;
 }
 
+.contractwork {
+    color: black;
+    cursor: pointer;
+}
+
 @media screen and (max-width: 1268px) {
     .WorkContent {
         display: block;
