--- a/src/Components/About/About.module.css
+++ b/src/Components/About/About.module.css
@@ -12,7 +12,7 @@
     max-width: 1328px;
     margin: 0 auto;
     display: flex;
-    padding-top: 40px;
+    padding-top: 200px;
     font-size: 19px;
     font-weight: 300;
     padding-bottom: 40px;
@@ -58,5 +58,8 @@
     .AboutImage img {
         width: 100%;
         max-width: 500px;
+    }
+    .AboutContent {
+        padding-top: 100px
     }
 }
