--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -58,6 +58,12 @@
     text-align: center;
 }
 
+.Header__LogoItem {
+    width: 60px;
+    height: 90px;
+    margin: auto;
+}
+
 @media screen and (max-width: 768px) {
     .Header__Nav {
         max-width: 50px;
