--- a/src/Components/Reviews/Reviews.module.css
+++ b/src/Components/Reviews/Reviews.module.css
@@ -17,9 +17,10 @@
 }
 
 .ReviewsTitle {
+    font-size: 36px;
     font-family: Roboto;
-    font-size: 48px;
     font-weight: 300;
+    color: black;
 }
 
 .ReviewsSubTitle {
