--- a/src/Components/About/About.module.css
+++ b/src/Components/About/About.module.css
@@ -26,9 +26,10 @@
 }
 
 .AboutTitle {
-    font-size: 48px;
+    font-size: 36px;
     font-family: Roboto;
     font-weight: 300;
+    color: black;
 }
 
 @media screen and (max-width: 1268px) {
