--- a/src/Components/Contact/Contact.module.css
+++ b/src/Components/Contact/Contact.module.css
@@ -20,6 +20,7 @@
     background-color: #497577;
     border: 1px solid #e3e3e3;
     border-radius: 6px;
+    font-size: 18px;
     color: #FFFFFF;
     margin: 0 auto;
     cursor: pointer;
@@ -38,14 +39,15 @@
 .ContactTitle {
     margin-top: 0;
     padding-top: 100px;
+    font-size: 36px;
     font-family: Roboto;
-    font-size: 48px;
     font-weight: 300;
+    color: black;
 }
 
 .ContactSubTitle {
     font-family: Roboto;
-    font-size: 24px;
+    font-size: 22px;
     font-weight: 300;
 }
 
