--- a/src/Ui/Buttons/Button.module.css
+++ b/src/Ui/Buttons/Button.module.css
@@ -5,6 +5,7 @@
     border: 1px solid #e3e3e3;
     border-radius: 6px;
     color: #FFFFFF;
+    font-size: 18px;
     margin: 0 auto;
     cursor: pointer;
 }
