--- a/src/Ui/Input/Input.module.css
+++ b/src/Ui/Input/Input.module.css
@@ -8,3 +8,43 @@
     border: 1px solid #e3e3e3;
     text-align: center;
 }
+
+input::-webkit-input-placeholder {
+    text-indent: 0px;
+    transition: text-indent 0.5s ease;
+}
+
+input::-moz-placeholder {
+    text-indent: 0px;
+    transition: text-indent 0.5s ease;
+}
+
+input:-moz-placeholder {
+    text-indent: 0px;
+    transition: text-indent 0.5s ease;
+}
+
+input:-ms-input-placeholder {
+    text-indent: 0px;
+    transition: text-indent 0.5s ease;
+}
+
+input:focus::-webkit-input-placeholder {
+    text-indent: 500px;
+    transition: text-indent 0.5s ease;
+}
+
+input:focus::-moz-placeholder {
+    text-indent: 500px;
+    transition: text-indent 0.5s ease;
+}
+
+input:focus:-moz-placeholder {
+    text-indent: 500px;
+    transition: text-indent 0.5s ease;
+}
+
+input:focus:-ms-input-placeholder {
+    text-indent: 500px;
+    transition: text-indent 0.5s ease;
+}
