--- a/src/Ui/Slider/Slider.module.css
+++ b/src/Ui/Slider/Slider.module.css
@@ -2,7 +2,9 @@
     display: unset;
 } */
 
-.SliderWrapper {}
+.SliderWrapper {
+    opacity: 1;
+}
 
 .Slide {
     /* display: flex !important; */
